added config, log rest controllers, changed cors and profiles